--- a/Bio/Bio.css
+++ b/Bio/Bio.css
@@ -50,16 +50,26 @@ img {
     flex-direction: row;
     flex: 1 1 auto;
     justify-content: flex-start;
-    align-items: stretch;
+    align-items: center;
 }
 .aboutCard--item > p {
-    margin: .5rem;
+    width: 50%;
+}
+
+.aboutCard--item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 .profilePic{
     grid-column: 3 / 4;
     grid-row: 1 / 2;
     justify-content: center;
     align-items: center;
+    justify-items: center;
+}
+.profilePic-img {
+    width: 70%;
 }
 .links {
     grid-column: 3 / 4;
@@ -92,17 +102,10 @@ img {
     color: var(--gold);
     
 }
-.menuBtn {
-    position: fixed;
-    left: 0;
-    bottom: 1vh;
-    box-sizing: content-box;
-    margin: 1rem;
-    padding: 1rem;
-    background: rgba(0,0,0,.5);
+
+.svg--box{
+    width: 50px;
 }
-
-
 /* media styles timmmee~~~~ for some reason media screen isn't ONLY applyin to small screens >:/*/
 @media only screen and (max-width: 600px) {
 body {
